<resources>
    <string name="app_name">Clínica Médica UTEC</string>
    <string name="A_clinica">CLÍNICA MÉDICA</string>
    <string name="B_Utec">UTEC</string>
    <string name="C_nuevacita">Nueva cita</string>
    <string name="D_contacto">Contacto</string>
    <string name="E_horario">Horario de atención</string>
    <string name="F_config">Configuración</string>
    <string name="G_salir">Salir</string>
    <string name="H_admin">Administrador</string>

    <string name="descripcionImagenes">Ícono o imágen</string>
    <string name="descripcionBotones">Botón</string>

    <string name="tituloConfiguracion">Configuración</string>


    <string name="tama_o_de_fuente">Tamaño de fuente:</string>
    <string name="peque_a">Pequeña</string>
    <string name="mediano">Mediano</string>
    <string name="grande">Grande</string>
    <string name="tema">Tema:</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="signo">Signo</string>
    <string name="regresar">Regresar</string>
    <string name="AboutusText">Lump of labour fallacy</string>
    <string name="cruz">Cruz</string>

    <string name="tituloAcercaDe">Acerca De</string>

    <string name="desarrollada_por">Aplicación desarrollada por:</string>
    <string name="integrante1">Diego Fernando Bejarano</string>
    <string name="integrante2">Amelia Violeta Hernández</string>
    <string name="integrante3">Dany Emerson Cerna</string>
    <string name="integrante4">Reynaldo Antonio Pérez</string>
    <string name="integrante5">Miguel Alberto Miranda</string>
    <string name="integrante6">Carlos Manuel Maravilla</string>

    <string name="NombreUniversidad">Universidad Tecnológica de El Salvador</string>
    <string name="derechosApp">Todos los derechos reservados. 2021</string>

    <string name="Clinica">Clinica Medica</string>
    <string name="Utec">UTEC</string>
    <string name="horario">Horarios :</string>
    <string name="dias">Lunes a Viernes</string>
    <string name="hora_uno">   Matutino:
    de 8:00 am a 11:00 am  </string>
    <string name="hora_dos">Vespertino: de 2.00 pm a 4:00 pm</string>
    <string name="cita">Datos de la cita:</string>
    <string name="fecha">Fecha: </string>
    <string name="hora">Turno: </string>
    <string name="MotivodeConsulta"> Motivo de consulta:</string>
    <string name="Estado_cita">Estado de Cita:</string>
    <string name="btnCancelar">Cancelar Cita</string>
    <string name="fecha_1_hora_1">Fecha 1 - Hora 1</string>
    <string name="estado_agendada">Estado: Agendada</string>
    <string name="nombre_citado">Nombre Citado</string>
    <string name="consultar_citas">Consultar Citas</string>
    <string name="informaci_n_de_contacto">Información de contacto</string>
    <string name="_17_avenida_norte_118">17º Avenida Norte, #118</string>
    <string name="direcci_n">Dirección:</string>
    <string name="correo_clinica_utec_gmail_com">Correo: clinica.utec@gmail.com</string>
    <string name="tel_fonos_2295_0122">Teléfonos: 2295-0122</string>
    <string name="ingrese_a_su_cuenta">Ingrese a su cuenta:</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="Para_siguiente">Siguiente</string>
    <string name="contrase_a">Contraseña</string>
    <string name="carnet">Carnet UTEC (si se posee):</string>
    <string name="ingrese_sus_datos">Ingrese sus datos:</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="dui">DUI:</string>
    <string name="agendar_cita">Agendar cita:</string>
    <string name="fechacita1">Fecha:</string>
    <string name="dd_mm_yyyy">aaaa-mm-dd</string>
    <string name="turnoCita1">Seleccione turno:</string>
    <string name="agendar">Agendar</string>
    <string name="regresar2">Regresar</string>
    <string name="descripci_n_del_motivo">Descripción del motivo:</string>
    <string name="ingrese_el_motivo_de_su_consulta">Ingrese el motivo de su consulta</string>
    <string name="nombreResutado">Nombre:</string>
    <string name="duiResultado">DUI:</string>
    <string name="carnetResultado">Carnet:</string>
    <string name="_00000000_0">00000000-0</string>
    <string name="formatoCarnet">00-0000-0000</string>
    <string name="nombre_de_prueba">Nombre de Prueba</string>
    <string name="_99999999_9">99999999-9</string>
    <string name="_22_4444_2000">22-4444-2000</string>
    <string name="_2025_12_24">2025-12-24</string>
    <string name="mi_motivo_es">Mi motivo es</string>

    <array name="turnosHoras">
        <item>Matutino</item>
        <item>Vespertino</item>
    </array>

    <string-array name="text_values">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>
    <string-array name="text_key">
        <item>textSmall</item>
        <item>textMedium</item>
        <item>textLarge</item>
    </string-array>

    <string-array name="theme_values">
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string-array name="theme_key">
        <item>light</item>
        <item>dark</item>
    </string-array>


</resources>