<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_mostrar"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:layout_marginTop="10dp"
    android:clickable="true"
    android:elevation="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TxtId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Id"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/TxtEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/estado_agendada"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TxtNombre"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/nombre_citado"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TxtFechaHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/fecha_1_hora_1"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>